# trackify-automation

./: .env.example  .gitignore  README.md  README.zh-CN.md  README.zh-HK.md  README.zh-TW.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
ai/: __init__.py  triage.py
data/: test_cases.xlsx  test_cases_template.xlsx  test_data.yaml  ~$test_cases_backup.xlsx
data/environments/: preprod.yaml  prod.yaml  test.yaml
docs/: AI_TRIAGE.md  AI_TRIAGE.zh-CN.md  AI_TRIAGE.zh-HK.md  AI_TRIAGE.zh-TW.md  DESIGN.md  DESIGN.zh-CN.md  DESIGN.zh-HK.md  DESIGN.zh-TW.md  Feature_Inventory.md  Feature_Inventory.zh-CN.md  Feature_Inventory.zh-HK.md  REFLECTION.md  REFLECTION.zh-CN.md  REFLECTION.zh-HK.md  REFLECTION.zh-TW.md  SCALING.md  TECHNICAL_SPEC.md  TECHNICAL_SPEC.zh-CN.md  TECHNICAL_SPEC.zh-HK.md  TECHNICAL_SPEC.zh-TW.md
docs/reports/: device-matrix-preprod-sample.md
flow/: add_transaction_flow.py  app_setup_flow.py  transactions_flow.py
locator/: add_transaction.yaml  home.yaml  onboarding.yaml  transactions.yaml
page/: add_transaction_page.py  base_page.py  home_page.py  onboarding_page.py  transactions_page.py
scripts/: run_changed_matrix.sh  run_device_matrix.py  sync_engine.py
tests/: __init__.py
tests/features/: add_transaction.feature  transactions.feature
tests/step_defs/: __init__.py  add_transaction_steps.py  common_steps.py  transactions_steps.py
unit_tests/: __init__.py  test_run_device_matrix.py
utils/: app_metadata.py  config.py  driver.py  environment_profile.py  locator_loader.py  system_dialogs.py
(+13 files in other folders)
