[project]
name = "trackify-automation"
version = "0.1.0"
description = "AI-assisted end-to-end mobile automation for Trackify."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Appium-Python-Client>=3,<4",
    "allure-pytest>=2,<3",
    "openpyxl>=3,<4",
    "pytest>=8,<9",
    "pytest-bdd>=7,<8",
    "pytest-rerunfailures>=16,<17",
    "pyyaml>=6,<7",
    "selenium>=4,<5",
    "watchdog>=4,<5",
]

[tool.uv]
package = false
